{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 30,
  "lineage": "6fca8fc9-f4ae-17bb-0ba4-fb9e1d6edfe3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b3a72ad7c3abcffd",
            "public_dns": "ec2-18-180-231-226.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.231.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-ivy-natgw-1a"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05023ae42bb26e019",
            "public_dns": "ec2-54-168-228-130.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.168.228.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-ivy-natgw-1c"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e1061039aeddb148",
            "public_dns": "ec2-3-113-53-31.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.113.53.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-ivy-natgw-1d"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cc0b8039f74e5d94",
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b3a72ad7c3abcffd",
            "id": "nat-0fea39861aa719cdd",
            "network_interface_id": "eni-084e090ca44c0b68d",
            "private_ip": "20.10.1.219",
            "public_ip": "18.180.231.226",
            "subnet_id": "subnet-0e898dbbb445b3f89"
          },
          "depends_on": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.this",
            "aws_subnet.az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05023ae42bb26e019",
            "id": "nat-0a2137a193d631f1b",
            "network_interface_id": "eni-0ac53429d1b5afeb4",
            "private_ip": "20.10.2.56",
            "public_ip": "54.168.228.130",
            "subnet_id": "subnet-09815e7706a7d215a"
          },
          "depends_on": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.this",
            "aws_subnet.az2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1061039aeddb148",
            "id": "nat-05180f9e9679da6ae",
            "network_interface_id": "eni-063da5c37351cf5ed",
            "private_ip": "20.10.3.164",
            "public_ip": "3.113.53.31",
            "subnet_id": "subnet-09d426d226d63de9e"
          },
          "depends_on": [
            "aws_eip.nat_gateway_2",
            "aws_internet_gateway.this",
            "aws_subnet.az3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08b089bb080e260b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0fea39861aa719cdd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b089bb080e260b4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_0",
            "aws_route_table.private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06946eddcc448ec0c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0a2137a193d631f1b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06946eddcc448ec0c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_1",
            "aws_route_table.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-077d35f109cbcd7791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-05180f9e9679da6ae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-077d35f109cbcd779",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.nat_gateway_2",
            "aws_route_table.private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc0b8039f74e5d94",
            "id": "r-rtb-09efae2415267f1131080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09efae2415267f113",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08b089bb080e260b4",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-ivy-private-1a"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06946eddcc448ec0c",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-ivy-private-1c"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-077d35f109cbcd779",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-ivy-private-1d"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09efae2415267f113",
            "owner_id": "198098511860",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-ivy-public"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a87f3b191ac2f3f",
            "route_table_id": "rtb-09efae2415267f113",
            "subnet_id": "subnet-0e898dbbb445b3f89"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03032e644506c361b",
            "route_table_id": "rtb-09efae2415267f113",
            "subnet_id": "subnet-09815e7706a7d215a"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.az2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5aeb77b85f514b0",
            "route_table_id": "rtb-09efae2415267f113",
            "subnet_id": "subnet-09d426d226d63de9e"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.az3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02768d0d5cfaaaf5b",
            "route_table_id": "rtb-08b089bb080e260b4",
            "subnet_id": "subnet-0a24e29ef37ed1824"
          },
          "depends_on": [
            "aws_route_table.private_0",
            "aws_subnet.private_az1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aa0beb95264bae9",
            "route_table_id": "rtb-06946eddcc448ec0c",
            "subnet_id": "subnet-0d74c6d46651fb840"
          },
          "depends_on": [
            "aws_route_table.private_1",
            "aws_subnet.private_az2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073b17ba3d392c630",
            "route_table_id": "rtb-077d35f109cbcd779",
            "subnet_id": "subnet-09ae694b08d65d4dc"
          },
          "depends_on": [
            "aws_route_table.private_2",
            "aws_subnet.private_az3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0e898dbbb445b3f89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "20.10.1.0/24",
            "id": "subnet-0e898dbbb445b3f89",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy-1a"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-09815e7706a7d215a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "20.10.2.0/24",
            "id": "subnet-09815e7706a7d215a",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy-1c"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-09d426d226d63de9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "20.10.3.0/24",
            "id": "subnet-09d426d226d63de9e",
            "map_public_ip_on_launch": true,
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy-1d"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0a24e29ef37ed1824",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "20.10.64.0/24",
            "id": "subnet-0a24e29ef37ed1824",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy-private_1a"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-0d74c6d46651fb840",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "20.10.65.0/24",
            "id": "subnet-0d74c6d46651fb840",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy-private_1c"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:subnet/subnet-09ae694b08d65d4dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "20.10.66.0/24",
            "id": "subnet-09ae694b08d65d4dc",
            "map_public_ip_on_launch": false,
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy-private_1d"
            },
            "vpc_id": "vpc-0c375c2ac738dcd6d"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:198098511860:vpc/vpc-0c375c2ac738dcd6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.10.0.0/16",
            "default_network_acl_id": "acl-084ad3b0121a890c4",
            "default_route_table_id": "rtb-084da4ce05ff73757",
            "default_security_group_id": "sg-027f54103cb4071eb",
            "dhcp_options_id": "dopt-3233cf55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c375c2ac738dcd6d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-084da4ce05ff73757",
            "owner_id": "198098511860",
            "tags": {
              "Name": "prod-ivy"
            }
          }
        }
      ]
    }
  ]
}